--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,157 @@
+:root {
+	--primary: #D81E5B;
+	--secondary: #8A4EFC;
+	--light: #EEE;
+	--light-alt: #61759b;
+	--dark: #131A26;
+	--dark-alt: #202B3E;
+}
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: "Fira Sans", sans-serif;
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	background-color: var(--dark-alt);
+	color: var(--light);
+}
+.App {
+	padding : 32px;
+}
+h1 {
+	font-size : 40px;
+	font-weight: 700;
+	margin-bottom: 32px;
+}
+h4 {
+	font-size : 18px;
+	color: var(--light-alt);
+	text-transform: uppercase;
+	font-weight: 400;
+	margin-bottom: 16px;
+}
+.todo {
+	position: relative;
+	background-color: var(--dark);
+	padding:16px;
+	border-radius: 16px;
+	display: flex;
+	align-items: center;
+	transition: 0.5s;
+	cursor: pointer;
+	margin-bottom: 16px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.todo:hover {
+	opacity: 0.8;
+}
+
+.todo .checkbox {
+	width: 20px;
+	height:20px;
+	margin-right: 16px;
+	border-radius: 999px;
+	background-color: var(--dark-alt);
+	transition: 0.4s;
+}
+.todo.is-complete .checkbox {
+	background-color: var(--primary);
+	background-image: linear-gradient(to bottom, var(--primary), var(--secondary));
+}
+.todo.is-complete .text {
+	text-decoration: line-through;
+}
+.todo .text {
+	font-size : 20px;
+}
+.todo .delete-todo {
+	position: absolute;
+	top:50%;
+	transform: translateY(-50%);
+	right:16px;
+	width: 24px;
+	height: 24px;
+	color: var(--light);
+	background-color: #AF1E2D;
+	border-radius: 50%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.addPopup {
+	position: fixed;
+	bottom: 32px;
+	right: 32px;
+	display:flex;
+	align-items: center;	
+	justify-content: center;
+	font-size : 30px;
+	width: 64px;
+	height: 64px;
+	border-radius: 999px;
+	color: var(--light);
+	background-image: linear-gradient(to bottom, var(--primary), var(--secondary));
+}
+
+.popup {
+	position: fixed;
+	top:50%;
+	left:50%;
+	transform: translate(-50%, -50%);   
+	width: 400px;
+	max-width: 400px;
+	background-color: var(--light);
+	padding: 32px;
+	border-radius: 16px;
+	box-shadow : 0 3px 24px var(--dark);
+}
+
+.closePopup {
+	position: absolute;
+	top:16px;
+	right:16px;
+	width: 24px;
+	height: 24px;
+	font-size:20px;
+	color: var(--light);
+	cursor: pointer;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: var(--primary);
+	border-radius: 50%;
+}
+
+.popup h3 {
+	font-size : 20px;
+	font-weight: 400;
+	margin-bottom: 16px;
+	color: var(--dark);
+	text-transform: uppercase;
+}
+
+.add-todo-input {
+	appearance: none;
+	border: none;
+	outline: none;
+	background-color: white;
+	padding:16px;
+	border-radius: 16px;
+	box-shadow: 0 2px 24px rgba(0,0,0,0.2);
+	font-size:20px;
+	margin-bottom: 16px;
+}
+
+.button {
+	padding:16px 32px;
+	border-radius: 99px;
+	background-image: linear-gradient(to right, var(--primary), var(--secondary));
+	display: inline-block;
+	font-weight: 700;
+	text-transform: uppercase;
+	font-size:18px;
+	text-align: center;
+	cursor: pointer;
 }
